--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
         "autoprefixer": "^10.4.19",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0.0",
-        "vite": "^5.2.11",
         "postcss": "^8.4.38",
-        "tailwindcss": "^3.4.3"
-
+        "tailwindcss": "^3.4.3",
+        "vite": "^5.2.11"
     },
     "dependencies": {
-        "@material-tailwind/html": "^2.2.2"
-
+        "@material-tailwind/html": "^2.2.2",
+        "bootstrap-icons": "^1.11.3"
     }
 }
